@@ -31,9 +31,7 @@
 #include <libintl.h>
 #include <locale.h>
 
-
 #include <unique/unique.h>
-
 
 #include "config.h"
 #include "sliceclass.h"
